# embeddedsw

./: .clang-format  0001-bsp-Support-for-msrset-and-msrclr-instructions.patch  README.txt  license.txt
XilinxProcessorIPLib/drivers/: CMakeLists.txt
XilinxProcessorIPLib/drivers/aiefal/: CMakeLists.txt  README.md  license.txt
XilinxProcessorIPLib/drivers/aiefal/cmake/: collect.cmake  depends.cmake  options.cmake
XilinxProcessorIPLib/drivers/aiefal/data/: aiefal.mdd  aiefal.tcl
XilinxProcessorIPLib/drivers/aiefal/doc/: CMakeLists.txt  Doxyfile.in  aiefal-class.txt  aiefal-state-prereserved.txt  aiefal-state.txt
XilinxProcessorIPLib/drivers/aiefal/examples/: CMakeLists.txt  profile-aie.cpp  profile-io-aie.cpp  trace-pc-aie.cpp
XilinxProcessorIPLib/drivers/aiefal/src/: CMakeLists.txt  Makefile  xaiefal.hpp
XilinxProcessorIPLib/drivers/aiefal/tests/: CMakeLists.txt
XilinxProcessorIPLib/drivers/aiengine/data/: aiengine.mdd  aiengine.tcl  aiengine.yaml
XilinxProcessorIPLib/drivers/aiengine/examples/: xaie-events.c  xaierts_test_app.c
XilinxProcessorIPLib/drivers/aiengine/src/: CMakeLists.txt  Makefile  Makefile.Linux  xaiengine.h
XilinxProcessorIPLib/drivers/aienginev2/data/: aienginev2.mdd  aienginev2.tcl
XilinxProcessorIPLib/drivers/aienginev2/docs/: aie_driver_docs_config.dox  driver_layout.xml  html_footer.html
XilinxProcessorIPLib/drivers/aienginev2/examples/: Makefile  xaie_tile_dma_loopback.c
XilinxProcessorIPLib/drivers/aienginev2/src/: Makefile  Makefile.Linux  Makefile.rsc  xaiengine.h
XilinxProcessorIPLib/drivers/asu_ram_ecc/data/: asu_ram_ecc.yaml
XilinxProcessorIPLib/drivers/asu_ram_ecc/src/: CMakeLists.txt
XilinxProcessorIPLib/drivers/audio_formatter/data/: audio_formatter.mdd  audio_formatter.tcl  audio_formatter.yaml
XilinxProcessorIPLib/drivers/audio_formatter/examples/: index.html  readme.txt  xaudioformatter_intr_example.c  xaudioformatter_selftest_example.c
XilinxProcessorIPLib/drivers/audio_formatter/src/: CMakeLists.txt  Makefile  xaudioformatter.c  xaudioformatter.h  xaudioformatter_g.c  xaudioformatter_hw.h  xaudioformatter_intr.c  xaudioformatter_sinit.c
XilinxProcessorIPLib/drivers/avbuf/data/: avbuf.mdd  avbuf.tcl  avbuf.yaml
XilinxProcessorIPLib/drivers/avbuf/src/: CMakeLists.txt  xavbuf.c  xavbuf.h  xavbuf_clk.c  xavbuf_clk.h  xavbuf_hw.h  xavbuf_videoformats.c
XilinxProcessorIPLib/drivers/axicdma/data/: axicdma.mdd  axicdma.tcl  axicdma.yaml  axicdma_header.h  axicdma_tapp.tcl  xaxicdma_sg_intr_header.h  xaxicdma_sg_poll_header.h  xaxicdma_simple_intr_header.h  xaxicdma_simple_poll_header.h
XilinxProcessorIPLib/drivers/axicdma/examples/: CMakeLists.txt  index.html  readme.txt  xaxicdma_example_hybrid_intr.c  xaxicdma_example_hybrid_poll.c  xaxicdma_example_sg_intr.c  xaxicdma_example_sg_poll.c  xaxicdma_example_simple_intr.c  xaxicdma_example_simple_poll.c
XilinxProcessorIPLib/drivers/axicdma/src/: CMakeLists.txt  Makefile  xaxicdma.c  xaxicdma.h  xaxicdma_bd.c  xaxicdma_bd.h  xaxicdma_bdring.c  xaxicdma_g.c  xaxicdma_hw.h  xaxicdma_i.h  xaxicdma_intr.c  xaxicdma_porting_guide.h  xaxicdma_sinit.c  xdebug.h
XilinxProcessorIPLib/drivers/axidma/data/: axidma.mdd  axidma.tcl  axidma.yaml  axidma_header.h  axidma_tapp.tcl
XilinxProcessorIPLib/drivers/axidma/examples/: CMakeLists.txt  Makefile  Makefile.Linux  index.html  main.c  readme.txt  xaxidma_example_multichan_sg_intr.c  xaxidma_example_poll_multi_pkts.c  xaxidma_example_selftest.c  xaxidma_example_sg_intr.c  xaxidma_example_sg_poll.c  xaxidma_example_sgcyclic_intr.c  xaxidma_example_simple_intr.c  xaxidma_example_simple_poll.c  xaxidma_multichan_sg_intr.c  xaxidma_poll_multi_pkts.c
XilinxProcessorIPLib/drivers/axidma/src/: CMakeLists.txt  Makefile  Makefile.Linux  xaxidma.c  xaxidma.h  xaxidma_bd.c  xaxidma_bd.h  xaxidma_bdring.c  xaxidma_bdring.h  xaxidma_g.c  xaxidma_hw.h  xaxidma_linux.h  xaxidma_porting_guide.h  xaxidma_selftest.c  xaxidma_sinit.c  xaxidma_status.h  xdebug.h  xil_io.h  xil_printf.h  xstatus.h
XilinxProcessorIPLib/drivers/axiethernet/data/: axiethernet.mdd  axiethernet.tcl  axiethernet.yaml  axiethernet_fifo_intr_header.h  axiethernet_header.h  axiethernet_intr_header.h  axiethernet_mcdma_intr_header.h  axiethernet_tapp.tcl  dependencies.props
XilinxProcessorIPLib/drivers/axiethernet/examples/: CMakeLists.txt  index.html  readme.txt  xaxiethernet_example.h  xaxiethernet_example_extmulticast.c  xaxiethernet_example_extvlan.c  xaxiethernet_example_intr_fifo.c  xaxiethernet_example_intr_mcdma.c  xaxiethernet_example_intr_sgdma.c  xaxiethernet_example_mcdma_poll.c  xaxiethernet_example_polled.c  xaxiethernet_example_readme.txt  xaxiethernet_example_util.c  xaxiethernet_mcdma_ping_req_example.c
XilinxProcessorIPLib/drivers/axiethernet/src/: CMakeLists.txt  Makefile  xaxiethernet.c  xaxiethernet.h  xaxiethernet_control.c  xaxiethernet_g.c  xaxiethernet_hw.h  xaxiethernet_porting_guide.h  xaxiethernet_sinit.c  xdebug.h
XilinxProcessorIPLib/drivers/axipcie/data/: axipcie.mdd  axipcie.tcl  axipcie.yaml
XilinxProcessorIPLib/drivers/axipcie/examples/: index.html  readme.txt  xaxipcie_ep_cdma_example.c  xaxipcie_ep_enable_example.c  xaxipcie_rc_cdma_example.c  xaxipcie_rc_enumerate_example.c
XilinxProcessorIPLib/drivers/axipcie/src/: CMakeLists.txt  Makefile  xaxipcie.c  xaxipcie.h  xaxipcie_g.c  xaxipcie_hw.h  xaxipcie_intr.c  xaxipcie_porting_guide.h  xaxipcie_sinit.c
XilinxProcessorIPLib/drivers/axipmon/data/: axipmon.mdd  axipmon.tcl  axipmon.yaml
XilinxProcessorIPLib/drivers/axipmon/examples/: CMakeLists.txt  index.html  readme.txt  xaxipmon_intr_example.c  xaxipmon_ocm_example.c  xaxipmon_polled_example.c
XilinxProcessorIPLib/drivers/axipmon/src/: CMakeLists.txt  Makefile  xaxipmon.c  xaxipmon.h  xaxipmon_g.c  xaxipmon_hw.h  xaxipmon_selftest.c  xaxipmon_sinit.c
XilinxProcessorIPLib/drivers/axis_switch/data/: axis_switch.mdd  axis_switch.tcl  axis_switch.yaml
XilinxProcessorIPLib/drivers/axis_switch/src/: Makefile  (+7 more)
XilinxProcessorIPLib/drivers/board_common/: board_common.mdd
lib/sw_apps/openamp_sdt/: CMakeLists.txt
(+42576 files in other folders)
