# Copyright (C) 2023 Advanced Micro Devices, Inc.  All rights reserved.
# SPDX-License-Identifier: MIT
cmake_minimum_required(VERSION 3.15)
project(avbuf)

find_package(common)
collector_create (PROJECT_LIB_HEADERS "${CMAKE_CURRENT_SOURCE_DIR}")
collector_create (PROJECT_LIB_SOURCES "${CMAKE_CURRENT_SOURCE_DIR}")
include_directories(${CMAKE_BINARY_DIR}/include)
collect (PROJECT_LIB_SOURCES xavbuf.c)
collect (PROJECT_LIB_HEADERS xavbuf_clk.h)
collect (PROJECT_LIB_SOURCES xavbuf_clk.c)
collect (PROJECT_LIB_HEADERS xavbuf.h)
collect (PROJECT_LIB_SOURCES xavbuf_videoformats.c)
collect (PROJECT_LIB_HEADERS xavbuf_hw.h)
collector_list (_sources PROJECT_LIB_SOURCES)
collector_list (_headers PROJECT_LIB_HEADERS)
file(COPY ${_headers} DESTINATION ${CMAKE_BINARY_DIR}/include)
add_library(avbuf STATIC ${_sources})
set_target_properties(avbuf PROPERTIES LINKER_LANGUAGE C)
