# Copyright (c) 2021 Xilinx, Inc.  All rights reserved.
#Copyright (C) 2023 Advanced Micro Devices, Inc. All Rights Reserved.
# SPDX-License-Identifier: MIT
cmake_minimum_required(VERSION 2.8.9)
include(${CMAKE_CURRENT_SOURCE_DIR}/../../../../cmake/common.cmake NO_POLICY_SCOPE)
project(axivdma)

collector_create (PROJECT_LIB_HEADERS "${CMAKE_CURRENT_SOURCE_DIR}")
collector_create (PROJECT_LIB_SOURCES "${CMAKE_CURRENT_SOURCE_DIR}")
include_directories(${CMAKE_BINARY_DIR}/include)
collect (PROJECT_LIB_SOURCES xaxivdma.c)
collect (PROJECT_LIB_HEADERS xaxivdma.h)
collect (PROJECT_LIB_SOURCES xaxivdma_channel.c)
collect (PROJECT_LIB_SOURCES xaxivdma_g.c)
collect (PROJECT_LIB_HEADERS xaxivdma_hw.h)
collect (PROJECT_LIB_HEADERS xaxivdma_i.h)
collect (PROJECT_LIB_SOURCES xaxivdma_intr.c)
collect (PROJECT_LIB_HEADERS xaxivdma_porting_guide.h)
collect (PROJECT_LIB_SOURCES xaxivdma_selftest.c)
collect (PROJECT_LIB_SOURCES xaxivdma_sinit.c)
collector_list (_sources PROJECT_LIB_SOURCES)
collector_list (_headers PROJECT_LIB_HEADERS)
file(COPY ${_headers} DESTINATION ${CMAKE_BINARY_DIR}/include)
add_library(axivdma STATIC ${_sources})
set_target_properties(axivdma PROPERTIES LINKER_LANGUAGE C)
install(TARGETS axivdma LIBRARY DESTINATION ${CMAKE_SOURCE_DIR}/build ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR})
