# Copyright (C) 2023 Advanced Micro Devices, Inc.  All rights reserved.
# SPDX-License-Identifier: MIT
cmake_minimum_required(VERSION 3.15)
project(clockps)

find_package(common)
collector_create (PROJECT_LIB_HEADERS "${CMAKE_CURRENT_SOURCE_DIR}")
collector_create (PROJECT_LIB_SOURCES "${CMAKE_CURRENT_SOURCE_DIR}")
include_directories(${CMAKE_BINARY_DIR}/include)
collect (PROJECT_LIB_SOURCES xclockps_mux.c)
#collect (PROJECT_LIB_SOURCES xclockps_sinit.c)
collect (PROJECT_LIB_SOURCES xclockps_divider.c)
collect (PROJECT_LIB_SOURCES xclockps_gate.c)
collect (PROJECT_LIB_SOURCES xclockps_sinit.c)
collect (PROJECT_LIB_SOURCES xclockps_g.c)
collect (PROJECT_LIB_HEADERS xclockps_hw.h)
collect (PROJECT_LIB_SOURCES xclockps.c)
collect (PROJECT_LIB_HEADERS xclockps.h)
collect (PROJECT_LIB_SOURCES xclockps_fixedfactor.c)
collect (PROJECT_LIB_SOURCES xclockps_pll.c)
collector_list (_sources PROJECT_LIB_SOURCES)
collector_list (_headers PROJECT_LIB_HEADERS)
file(COPY ${_headers} DESTINATION ${CMAKE_BINARY_DIR}/include)
add_library(clockps STATIC ${_sources})
set_target_properties(clockps PROPERTIES LINKER_LANGUAGE C)
