# Copyright (C) 2023 Advanced Micro Devices, Inc.  All rights reserved.
# SPDX-License-Identifier: MIT
cmake_minimum_required(VERSION 3.15)
project(dcsub)

find_package(common)
collector_create (PROJECT_LIB_HEADERS "${CMAKE_CURRENT_SOURCE_DIR}")
collector_create (PROJECT_LIB_SOURCES "${CMAKE_CURRENT_SOURCE_DIR}")
include_directories(${CMAKE_BINARY_DIR}/include)
collect (PROJECT_LIB_SOURCES xdc.c)
collect (PROJECT_LIB_HEADERS xdc.h)
collect (PROJECT_LIB_SOURCES xdcsub.c)
collect (PROJECT_LIB_HEADERS xdcsub.h)
collect (PROJECT_LIB_SOURCES xdc_videoformats.c)
collect (PROJECT_LIB_HEADERS xdc_hw.h)
collect (PROJECT_LIB_SOURCES xdcdma.c)
collect (PROJECT_LIB_HEADERS xdcdma.h)
collect (PROJECT_LIB_HEADERS xdcdma_hw.h)
collector_list (_sources PROJECT_LIB_SOURCES)
collector_list (_headers PROJECT_LIB_HEADERS)
file(COPY ${_headers} DESTINATION ${CMAKE_BINARY_DIR}/include)
add_library(dcsub STATIC ${_sources})
set_target_properties(dcsub PROPERTIES LINKER_LANGUAGE C)
