# Copyright (C) 2023 Advanced Micro Devices, Inc.  All rights reserved.
# SPDX-License-Identifier: MIT
cmake_minimum_required(VERSION 3.15)
project(dfeccf)

find_package(common)
add_definitions(-D__BAREMETAL__)
collector_create (PROJECT_LIB_HEADERS "${CMAKE_CURRENT_SOURCE_DIR}")
collector_create (PROJECT_LIB_SOURCES "${CMAKE_CURRENT_SOURCE_DIR}")
include_directories(${CMAKE_BINARY_DIR}/include)
collect (PROJECT_LIB_SOURCES xdfeccf.c)
collect (PROJECT_LIB_HEADERS xdfeccf_hw.h)
collect (PROJECT_LIB_HEADERS xdfeccf.h)
collect (PROJECT_LIB_SOURCES xdfeccf_sinit.c)
collect (PROJECT_LIB_SOURCES xdfeccf_intr.c)
collect (PROJECT_LIB_SOURCES xdfeccf_g.c)
collector_list (_sources PROJECT_LIB_SOURCES)
collector_list (_headers PROJECT_LIB_HEADERS)
file(COPY ${_headers} DESTINATION ${CMAKE_BINARY_DIR}/include)
add_library(dfeccf STATIC ${_sources})
set_target_properties(dfeccf PROPERTIES LINKER_LANGUAGE C)
