# Copyright (C) 2023 Advanced Micro Devices, Inc.  All rights reserved.
# SPDX-License-Identifier: MIT
cmake_minimum_required(VERSION 3.15)
project(dfeofdm)

find_package(common)
add_definitions(-D__BAREMETAL__)
collector_create (PROJECT_LIB_HEADERS "${CMAKE_CURRENT_SOURCE_DIR}")
collector_create (PROJECT_LIB_SOURCES "${CMAKE_CURRENT_SOURCE_DIR}")
include_directories(${CMAKE_BINARY_DIR}/include)
collect (PROJECT_LIB_SOURCES xdfeofdm.c)
collect (PROJECT_LIB_HEADERS xdfeofdm_hw.h)
collect (PROJECT_LIB_HEADERS xdfeofdm.h)
collect (PROJECT_LIB_SOURCES xdfeofdm_sinit.c)
collect (PROJECT_LIB_SOURCES xdfeofdm_intr.c)
collect (PROJECT_LIB_SOURCES xdfeofdm_g.c)
collector_list (_sources PROJECT_LIB_SOURCES)
collector_list (_headers PROJECT_LIB_HEADERS)
file(COPY ${_headers} DESTINATION ${CMAKE_BINARY_DIR}/include)
add_library(dfeofdm STATIC ${_sources})
set_target_properties(dfeofdm PROPERTIES LINKER_LANGUAGE C)
