# Copyright (C) 2023 - 2024 Advanced Micro Devices, Inc.  All rights reserved.
# SPDX-License-Identifier: MIT
cmake_minimum_required(VERSION 3.15)
project(dfeprach)

find_package(common)
add_definitions(-D__BAREMETAL__)
add_definitions(-DXLNX_PLATFORM)
collector_create (PROJECT_LIB_HEADERS "${CMAKE_CURRENT_SOURCE_DIR}")
collector_create (PROJECT_LIB_SOURCES "${CMAKE_CURRENT_SOURCE_DIR}")
include_directories(${CMAKE_BINARY_DIR}/include)
collect (PROJECT_LIB_SOURCES xdfeprach.c)
collect (PROJECT_LIB_HEADERS xdfeprach_hw.h)
collect (PROJECT_LIB_HEADERS xdfeprach.h)
collect (PROJECT_LIB_SOURCES xdfeprach_sinit.c)
collect (PROJECT_LIB_SOURCES xdfeprach_intr.c)
collect (PROJECT_LIB_SOURCES xdfeprach_g.c)
collector_list (_sources PROJECT_LIB_SOURCES)
collector_list (_headers PROJECT_LIB_HEADERS)
file(COPY ${_headers} DESTINATION ${CMAKE_BINARY_DIR}/include)
add_library(dfeprach STATIC ${_sources})
set_target_properties(dfeprach PROPERTIES LINKER_LANGUAGE C)
